--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,1 +1,13 @@
-# Add to this file for the Ansible lab
+#inventory      = /etc/ansible/hosts
+#host_key_checking = False
+#retry_files_enabled = False
+
+# config file for int-to-ansible 
+[defaults]
+# Use local hosts file in this folder
+inventory=./hosts 
+host_key_checking = False # Don't worry about RSA Fingerprints
+retry_files_enabled = False # Do not create them
+deprecation_warnings = False # Do not show warnings
+callback_plugins= ./callbacks # Output style
+stdout_callback = anstomlog # Output style
