--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 # config file for int-to-ansible 
 [defaults]
 # Use local hosts file in this folder
-inventory=./hosts 
+inventory = ./hosts
 # Don't worry about RSA Fingerprints
 host_key_checking = False
 # Do not create them
@@ -9,6 +9,6 @@ retry_files_enabled = False
 # Do not show warnings
 deprecation_warnings = False
 # Output style
-callback_plugins= ./callback
-# Output styleks
+callback_plugins= ./callbacks
+# Output style
 stdout_callback = anstomlog
