--- a/req1.yaml
+++ b/req1.yaml
@@ -20,7 +20,7 @@
          
    - name: Check result
      ios_command:
-       commands: sh run | begin line vty 0 4
+       commands: sh run | begin ip access-group REQ1 out
      register: result
      tags: show
 
