--- a/req1.yaml
+++ b/req1.yaml
@@ -20,11 +20,11 @@
          
    - name: Check result
      ios_command:
-       commands: sh ip access-lists REQ1 | begin ip access-group REQ1 out
+       commands: sh run | begin ip access-group REQ1 out
      register: result
      tags: show
 
    - name: Print result
      debug:
-       var: result.stdout_lines
+       var: sh ip access-lists REQ1  
      tags: show
