--- a/req1.yaml
+++ b/req1.yaml
@@ -9,22 +9,22 @@
      ios_config:
        parents:  ip access-list extended REQ1
        lines:
-         - 10 deny tcp any any eq telnet
-         - 20 permit ip any any
+         - deny tcp any any eq telnet
+         - permit ip any any
          
    - name: Apply new ACL to R2 Eth0/1 out
      ios_config:
-       parents: ip access-group REQ1 out
+       parents: int Eth0/1 out
        lines:
-         - access-class REQ1 in 
+         - ip access-group REQ1 out
          
    - name: Check result
      ios_command:
-       commands: sh run | begin ip access-group REQ1 out
+       commands: sh ip access-lists REQ1 | begin ip access-group REQ1 out
      register: result
      tags: show
 
    - name: Print result
      debug:
-       var: sh ip access-lists REQ1  
+       var: result.stdout_lines 
      tags: show
