--- a/req1.yaml
+++ b/req1.yaml
@@ -14,13 +14,13 @@
          
    - name: Apply new ACL to R2 Eth0/1 out
      ios_config:
-       parents: int Eth0/1 out
+       parents: int Eth0/1
        lines:
          - ip access-group REQ1 out
          
    - name: Check result
      ios_command:
-       commands: sh ip access-lists REQ1 | begin int Eth0/1 out
+       commands: sh ip access-lists REQ1
      register: result
      tags: show
 
