--- a/req2.yaml
+++ b/req2.yaml
@@ -1,1 +1,32 @@
+---
+- name: Configure REQ2 ACL
+  hosts: R1
+  gather_facts: false
+  connection: network_cli
+ 
+  tasks:
+   - name: Load new ACL into device
+     ios_config:
+       parents:  ip access-list extended REQ2
+       lines:
+         - permit icmp 192.168.20.20 host 192.168.10.10 echo
+         - permit icmp 192.168.20.20 any echo-reply
+         - deny icmp any any echo
+         - permit any ip any
+         
+   - name: Apply new ACL to R1 Eth0/0 out
+     ios_config:
+       parents: int Eth0/0
+       lines:
+         - ip access-group REQ2 out
+         
+   - name: Check result
+     ios_command:
+       commands: sh ip access-lists REQ2
+     register: result
+     tags: show
 
+   - name: Print result
+     debug:
+       var: result.stdout_lines 
+     tags: show
