--- a/req2.yaml
+++ b/req2.yaml
@@ -9,7 +9,7 @@
      ios_config:
        parents:  ip access-list extended REQ2
        lines:
-         - permit icmp 192.168.20.20 host 192.168.10.10 echo
+         - permit icmp 192.168.20.20 192.168.10.10 echo
          - permit icmp 192.168.20.20 any echo-reply
          - deny icmp any any echo
          - permit any ip any
