--- a/req2.yaml
+++ b/req2.yaml
@@ -14,11 +14,11 @@
          - deny icmp any any echo
          - permit ip any any
          
-   - name: Apply new ACL to R1 Eth0/0.10 out
+   - name: Apply new ACL to R1 Eth0/0.20 in
      ios_config:
-       parents: int Eth0/0.10
+       parents: int Eth0/0.20
        lines:
-         - ip access-group REQ2 out
+         - ip access-group REQ2 in
          
    - name: Check result
      ios_command:
