--- a/req3.yaml
+++ b/req3.yaml
@@ -13,11 +13,11 @@
          - deny tcp any any eq www
          - permit ip any any
          
-   - name: Apply new ACL to R1 Eth0/0.1 in
+   - name: Apply new ACL to R1 Eth0/1 out
      ios_config:
-       parents: int Eth0/0.1
+       parents: int Eth0/1
        lines:
-         - ip access-group REQ2 in
+         - ip access-group REQ2 out
          
    - name: Check result
      ios_command:
